# ppidb

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  check_leak.py  output.txt  ppidb.py  pyproject.toml  requirements.txt  test.ipynb  test_script.py
data/: README.md
data/merged/: README.md
p2psiglip_db/: __init__.py  __main__.py  cli.py
p2psiglip_db/data/: __init__.py  build_canonical_fasta.py  build_explicit_pair_negatives.py  build_hash_cluster_map.py  build_merged_hash_c3_split.py  build_rf2_train_plus_filtered_val.py  build_training_split_collections.py  create_ppi_h5_esm.py  dataset_prep.py  dedup_merged.py  download_database.py  fix_ppidb_evidence_labels.py  get_embeddings.py  integrate_precomputed_embeddings.py  link_existing_embeddings.py  merge_external_sources.py  merged_contract.py  normalize_evidence_labels.py  prepare_host_corpus_benchmarks.py  prepare_host_pathogen_corpus.py  prepare_host_v3_train_dataset.py  prepare_rf2_mplm3_hash_embeds.py  prepare_rf2_ppi_benchmark.py  prepare_rf2_ppi_interface_tiers.py  prepare_unified_host_embeddings.py  split_utils.py  validate_merged_contract.py  validate_training_split_collections.py
p2psiglip_db/embeds/: __init__.py  build_structure_source_tsv.py  copy_afdb_from_uniprot_manifest.py  copy_afdb_structures.py  download_afdb_from_uniprot_manifest.py  esm2.py  esmc.py  export_unmatched_sequences.py  extract_structure_3di.py  get_3di.py  io.py  map_afdb_uniprot_ids.py  minifold_predict.py  predict_3di.py  predict_3di_from_aa.py  profam.py  prosst.py  prostt5.py  prostt5_3di.py  prott5.py  saprot.py  simplefold_predict.py
p2psiglip_db/split/: __init__.py  (+1 more)
ppidb/: __init__.py
ppidb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_integrate.py  test_parsers.py
(+15 files in other folders)
