[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppidb"
version = "0.1.0"
description = "A toolkit for working with large-scale PPI databases"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Huang Yao"},
]
keywords = ["protein-protein interaction", "PPI", "bioinformatics", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
pandas = ["pandas>=2.0.0"]
mmseqs = []  # mmseqs2 installed via conda: conda install -c bioconda mmseqs2

[project.scripts]
ppidb = "ppidb.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ppidb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
