[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "p2psiglip-db"
version = "0.1.0"
description = "Database-building utilities for P2PSigLip workflows"
requires-python = ">=3.11"

[project.scripts]
ppidb = "p2psiglip_db.cli:main"

[tool.setuptools]
py-modules = ["ppidb"]

[tool.setuptools.packages.find]
where = ["."]
include = ["p2psiglip_db*"]
